fix: missing color

--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -19,6 +19,9 @@
   &.gray-400 {
     color: $gray-400;
   }
+  &.orange {
+    color: $orange;
+  }
 
   &:hover {
     background-color: $gray-200;
